# handbook

./: .gitignore  Promote-Respect.md  README.md  todolist.md
basis/: README.md  algorithm.md  datastruct.md
book-note/: README.md  computer_programming_art.md  cpp_primer.md  design_patterns.md  read_gopl-zh.md
boost/test/: client.cpp
code-snippet/: README.md  lru-cache.cpp
code-snippet/autobuild/: README.md
code-snippet/autobuild/cmake/test/src/: CMakeLists.txt
code-snippet/linux-api/: README.md  main.c
code-snippet/server-framework/: README.md
core/: README.md
design_demo/http_transfer/: README.md
design_patterns/: J2EE.md  README.md  composition.md  creator.md  handle.md  six_principles.md  timewheel.md
engineering/: DDD.md  FAQ.md  README.md  microservices.md  tech-fact.md  uml.md  version_control.md  代码规范与评审.md  工程琐事枚举.md  工程配置管理.md  怎么发版.md  数据安全.md  耦合和解耦.md  软件工程之道.md  软件架构.md
engineering/teamwork/: 团队.md
engineering/template/: 分析模板.md  项目复盘.md
engineering/工程场景/: 登录鉴权.md
engineering/测试工程/: 研测比例.md  谷歌质量分析.md
fintech/: README.md
guidelines/: README.md
guidelines/browser/: README.md  react.md  同源策略.md
hand-note/: README.md
hand-note/book-note/: cpp_primer.txt  effective_cpp.md
hand-note/fintech-note/: G30.md  README.md  资信评级.md
hand-note/note/: look_backward.md  look_forward.md  persistence.md  round_wheel.md  to-undergraduate-brother.md  white-crow.md
hand-note/think-note/: boat-sea-sword.md  copy.md  look_forward.md
hand-note/采风/: consensus.md  whatwelivefor.md  word-note.md  定风波.md  新安驿.md
handnote/: README.md
handnote/book-note/: README.md  code_complete.md  redis_key_name.md
handnote/code-snippet/: README.md
handnote/daily-note/: 2021.md  2022.md  2109.md  share.md  upgrade.md
handnote/job_seeking/: faq.md  midlife_gojob.md
patterns_design/: README.md  antipattern.md  composition.md  six_principles.md
patterns_practice/: db_tab_idx.md  redis_cache.md  timewheel.md
practice_sample/: README.md  http_bigbody.md  http_transit.md
project-manager/: README.md  microservices.md  tech-fact.md  uml.md  version_control.md  代码规范.md  代码规范与评审.md  六顶思考帽.md  删除无用代码.md  可测试性.md  团队.md  工程配置管理.md  日志最佳实践.md  最佳后端设计实践.md  最佳接口设计.md  模块化.md  沟通最佳实践.md  码后贤者.md  行业发展.md  软件工程之道.md  领域驱动.md
project-manager/CI&CD/: README.md  sonar.md
project-manager/hexo/: README.md  yilia.md
project-manager/shorthand/: shell.md
project-manager/测试工程/: WhyQA.md  test-certify.md
read-book/: README.md  book_list.txt  code_complete.txt  design_patterns.txt  effective_cpp.txt  gopl-zh.txt  read_gopl-zh.md  src_read_redis.txt
read_book/: cpp_primer.txt  effective_cpp.txt  interview_faq.txt  linux.txt  linux_cmd.txt  linux_process_status.txt  posix_api.txt  read_effective_c.md  src_read_thrift.txt
service_reform/: DDD.md  README.md  service.md  watch_warn.md
service_reform/distributed-system/: identify.md  分布式事务.md  分布式实践.md  分布式理论专题.md  分布式锁.md  系统设计思想.md  负载均衡算法.md
service_reform/server-framework/: thrift.md
service_reform/service-mesh/: high_server_cluster_design.txt  k8s_practice.md
shorthand/: README.md  defects.bak  defects.md  regex.md  sed+awk+grep.md  shell.md
simple-rpc/grpc/: CMakeLists.txt
simple-rpc/grpc/hiwork/: hiwork_client.cc
simple-rpc/grpc/include/log/: log_print.h
simple-rpc/grpc/protos/: hiwork.proto
simple-rpc/grpc/src/: CMakeLists.txt  hiworkserviceimpl.cc  main.cc
simple-rpc/grpc/src/conf/: mygrpc.conf
simple-rpc/grpc/test/: CMakeLists.txt  hiwork_client.cc  hiwork_client.h
simple-rpc/grpc/test/uniform_ecode/: uniform_ecode.c  uniform_ecode.h
socket/server/: main.cpp
socket/test/: client.cpp  makefile
tech-particle/: README.md  bak.md  data_struction.txt  high_server_cluster_design.txt  internet.md  linux_process_RSDTZX.doc  net.txt  openssl.txt  operating_system.txt  uml.md  uml.txt  version_control.md  version_control.txt  win_shell.md  防刷机制
tech-particle/C++/: C++11专题.md  C++语言专题.md  README.md  cplusplus_diary.md  data_struction.md
tech-particle/autobuild/autotools/: Makefile.am  README.md  configure.ac
tech-particle/autobuild/autotools/.deps/: auto_test.Po
tech-particle/basis/: datastruct.md
tech-particle/boost/: main.cpp
tech-particle/computer/: float.md  rune.md
tech-particle/database/: ESQL.md  README.md  SQL.md
tech-particle/distributed-system/: MPP.md  README.md  identify.md  全链路技术.md  分布式ID生成算法.md  分布式数据存储.md  分布式理论专题.md  分布式锁.md  系统设计思想.md
tech-particle/faq/: AI.md  C++11专题.md  C++语言专题.md  C10M.md  README.md  TCP协议.md  UDP协议.md  bigdata.md  epoll.md  go语言专题.md  http.md  identify.md  stun.md  trouble-shoot.md  uml.md  win_shell.md  亿级数据查找.md  分布式理论专题.md  安全系列专题.md  实时传输协议  实时传输协议.md  开发技能树.md  排序算法.md  数据结构.md  文件格式.md  文本差异对比.md  死锁问题.md  痛苦压测ffmpeg.md  算法专题.md  网络劫持.md  许可证.md  进程线程.md  长尾关键词.md
tech-particle/lang/: README.md  cc-keyword.md  closure.md
tech-particle/libevent/: libevent.txt
tech-particle/linux/: README.md  crash-reporter  depops.txt  env.md  epoll.md  git.md  kill.md  linux_shell.md  linux_signal.md  memory  process_status.md  shell.md  ucontext.md  upgrade.md  字符设备.md  文本处理.md
tech-particle/linux/api/ubus/notify/bak/notify_server/: CMakeLists.txt
tech-particle/mid-ware/: README.md
tech-particle/multi-media/: ffmpeg.md
tech-particle/network/: README.md  SDN-OpenFlow.md  TCP协议.md  UDP协议.md  http.md  protobuf.md  实时传输协议.md  电子邮件传输协议.md
tech-particle/server-framework/: README.md
tech-particle/server-framework/epoll/src/: CMakeLists.txt  server.c
tech-particle/service-mesh/: README.md  docker.md  k8s_practice.md
tech-particle/shell/: 字符串变量处理.md
tech_particle/: C++.txt  algorithm.txt  cppcheck.txt  database.txt  faq.txt  linux_cmd.txt  linux_signal.txt  log4cplus.txt  mybk2.cnf  net.txt  protocol_buffer.txt  stun.txt  vim.txt
test/: test_ios.sh
toolbox/: README.md  irc.md  ntpdate.md  opendns.md  openvpn.md
tools/: README.md  clear_none_image.sh  ntpdate.md  rm_nonc_files.sh
work/: defect_record.txt
work/autobuild/autogen/: README.txt  configure.ac
work/autobuild/cmake/hiwork/: CMakeLists.txt  hiwork.cpp
(+735 files in other folders)
