#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([auto_test], [1.0], [zqren@foxmail.com])
AC_CONFIG_SRCDIR([auto_test.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(auto_test, 1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
